--- a/ajout.html
+++ b/ajout.html
@@ -30,11 +30,11 @@
 		<section class="left_side">
 			<h1>Vous pouvez ajouter un nouvel article</h1>
 			<form action="recherche.html" method="post" enctype="multipart/form-data" class="formulary">
-				<label>Titre de l'article : <input type="text" name="titre"></label>
-				<label>Résumé de l'article : <textarea name="resume" rows=2></textarea></label>
-				<label>Contenu de l'article : <textarea name="art"></textarea></label>
-				<label>Choisissez l'image à associer à l'article : <input type="file" name="image"></label>
-				<button>Soumettre l'article</button>
+				<label>Titre de l&apos;article : <input type="text" name="titre"></label>
+				<label>R&eacute;sum&eacute; de l&apos;article : <textarea name="resume" rows=2></textarea></label>
+				<label>Contenu de l&apos;article : <textarea name="art"></textarea></label>
+				<label>Choisissez l&apos;image &agrave; associer &agrave; l&apos;article : <input type="file" name="image"></label>
+				<button>Soumettre l&apos;article</button>
 			</form>
 		</section>
 		<aside>
