--- a/biographie.html
+++ b/biographie.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
-	<link rel="stylesheet" type="text/css" href="assets/add_style.css">
 	<link rel="stylesheet" type="text/css" href="assets/biography_style.css">
     <title>Blog sur Christopher Nolan</title>
   </head>
@@ -31,26 +30,26 @@
 			<article>
 				<h1>Biographie de Christopher Nolan</h1>
 				<figure>
-					<img width="256" alt="Christopher Nolan à Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
+					<img width="256" alt="Christopher Nolan &agrave; Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
 					<figcaption>La photo est de sbclick <a href="http://creativecommons.org/licenses/by/2.0">[CC by 2.0]</a><a href="http://commons.wikimedia.org/wiki/File%3AChristopher_nolan.jpg"> <br>via Wikimedia Commons.</a></figcaption>
 				</figure>
-				<p>Christopher Nolan est un cinéaste primé qui a été reconnu pour son travail en tant que réalisateur, scénariste et producteur. Né à Londres, Nolan a commencé à faire des films à un âge précoce avec la caméra Super-8mm de son père. Pendant ses études de littérature anglaise au College University de Londres, il a tourné des films 16mm à la société de film de l'UCL, où il a appris les techniques des films de guerre qu'il utilisera plus tard pour faire son premier long métrage, <em>The Following</em>. Ce thriller noir a été reconnu à un certain nombre de festivals internationaux avant sa sortie en salles.</p>
+				<p>Christopher Nolan est un cin&eacute;aste prim&eacute; qui a &eacute;t&eacute; reconnu pour son travail en tant que r&eacute;alisateur, sc&eacute;nariste et producteur. N&eacute; &agrave; Londres, Nolan a commenc&eacute; &agrave; faire des films &agrave; un &acirc;ge pr&eacute;coce avec la cam&eacute;ra Super-8mm de son p&egrave;re. Pendant ses &eacute;tudes de litt&eacute;rature anglaise au College University de Londres, il a tourn&eacute; des films 16mm &agrave; la soci&eacute;t&eacute; de film de l&apos;UCL, o&ugrave; il a appris les techniques des films de guerre qu&apos;il utilisera plus tard pour faire son premier long m&eacute;trage, <em>The Following</em>. Ce thriller noir a &eacute;t&eacute; reconnu &agrave; un certain nombre de festivals internationaux avant sa sortie en salles.</p>
 
-				<p>Le deuxième film de Nolan a été le film indépendant <em>Memento</em>, qu'il a dirigé à partir de son propre scénario, basé sur une nouvelle de son frère Jonathan. Avec Guy Pearce, le film a fait remporter à Nolan de nombreux prix, dont l'Oscar et le Golden Globe Award du meilleur scénario original, l'Independent Spirit Awards du meilleur réalisateur et du meilleur scénario, et une nomination au Directors Guild of America (DGA) Award. Nolan a continué à diriger le thriller psychologique acclamé par la critique, <em>Insomnia</em>, mettant en vedette les Oscarisés Al Pacino, Robin Williams, et Hilary Swank.</p>
+				<p>Le deuxi&egrave;me film de Nolan a &eacute;t&eacute; le film ind&eacute;pendant <em>Memento</em>, qu&apos;il a dirig&eacute; &agrave; partir de son propre sc&eacute;nario, bas&eacute; sur une nouvelle de son fr&egrave;re Jonathan. Avec Guy Pearce, le film a fait remporter &agrave; Nolan de nombreux prix, dont l&apos;Oscar et le Golden Globe Award du meilleur sc&eacute;nario original, l&apos;Independent Spirit Awards du meilleur r&eacute;alisateur et du meilleur sc&eacute;nario, et une nomination au Directors Guild of America (DGA) Award. Nolan a continu&eacute; &agrave; diriger le thriller psychologique acclam&eacute; par la critique, <em>Insomnia</em>, mettant en vedette les Oscaris&eacute;s Al Pacino, Robin Williams, et Hilary Swank.</p>
 
-				<p>En 2005, Nolan a co-écrit et réalisé <em>Batman Begins</em>, avec Christian Bale, Michael Caine, Liam Neeson, Gary Oldman et Morgan Freeman. Salué par la critique et le public, le film de Nolan re-imaginé les films classiques de Batman et a fait de lui un héros emblématique et pertinent pour notre époque. En 2008, Nolan a dirigé, co-écrit et produit <em>The Dark Knight</em>, qui a gagné plus d'un milliard de dollars au box-office mondial et a été acclamé par la critique internationale. Nolan a été nominé pour un Directors Guild of America (DGA) Award, un Writers Guild of America (WGA) Award, et un Producers Guild of America (PGA) Award. Le film a également reçu huit nominations aux Oscars.</p>
+				<p>En 2005, Nolan a co-&eacute;crit et r&eacute;alis&eacute; <em>Batman Begins</em>, avec Christian Bale, Michael Caine, Liam Neeson, Gary Oldman et Morgan Freeman. Salu&eacute; par la critique et le public, le film de Nolan re-imagin&eacute; les films classiques de Batman et a fait de lui un h&eacute;ros embl&eacute;matique et pertinent pour notre &eacute;poque. En 2008, Nolan a dirig&eacute;, co-&eacute;crit et produit <em>The Dark Knight</em>, qui a gagn&eacute; plus d&apos;un milliard de dollars au box-office mondial et a &eacute;t&eacute; acclam&eacute; par la critique internationale. Nolan a &eacute;t&eacute; nomin&eacute; pour un Directors Guild of America (DGA) Award, un Writers Guild of America (WGA) Award, et un Producers Guild of America (PGA) Award. Le film a &eacute;galement re&ccedil;u huit nominations aux Oscars.</p>
 
-				<p>Nolan a dirigé, co-écrit et produit un thriller en 2006. <em>Le Prestige</em> est joué par Christian Bale et Hugh Jackman, magiciens dont la rivalité obsessionnelle conduit à la tragédie et à l'assassinat. Le film a reçu des nominations aux Oscars pour sa direction artistique et cinématographique exceptionnelle.</p>
+				<p>Nolan a dirig&eacute;, co-&eacute;crit et produit un thriller en 2006. <em>Le Prestige</em> est jou&eacute; par Christian Bale et Hugh Jackman, magiciens dont la rivalit&eacute; obsessionnelle conduit &agrave; la trag&eacute;die et &agrave; l&apos;assassinat. Le film a re&ccedil;u des nominations aux Oscars pour sa direction artistique et cin&eacute;matographique exceptionnelle.</p>
 			
-				<p>En 2010, Nolan séduit le public avec le film de science-fiction <em>Inception</em> acclamé, qu'il a dirigé et produit à partir de son propre scénario original. Ce drame de réflexion était une superproduction mondiale, gagnant plus de 800 millions de dollars et devenant l'un des films les plus discutés et débattus de l'année. Parmi ses nombreuses distinctions, Inception a reçu quatre Oscars et huit nominations, dont celui du meilleur film et du meilleur scénario. Nolan a été reconnu par ses pairs avec la DGA et le PGA Award nominations, ainsi que le Prix WGA pour son travail sur le film.</p>
+				<p>En 2010, Nolan s&eacute;duit le public avec le film de science-fiction <em>Inception</em> acclam&eacute;, qu&apos;il a dirig&eacute; et produit &agrave; partir de son propre sc&eacute;nario original. Ce drame de r&eacute;flexion &eacute;tait une superproduction mondiale, gagnant plus de 800 millions de dollars et devenant l&apos;un des films les plus discut&eacute;s et d&eacute;battus de l&apos;ann&eacute;e. Parmi ses nombreuses distinctions, Inception a re&ccedil;u quatre Oscars et huit nominations, dont celui du meilleur film et du meilleur sc&eacute;nario. Nolan a &eacute;t&eacute; reconnu par ses pairs avec la DGA et le PGA Award nominations, ainsi que le Prix WGA pour son travail sur le film.</p>
 			
-				<p>L'an dernier, Nolan conclut sa trilogie des films sur Batman avec <em>The Dark Knight Rises</em>. Comme son prédécesseur, il s'est très bien vendu au box-office, gagnant plus d'un milliard de dollars dans le monde entier. Seuls trois réalisateurs ont atteint cette étape avec deux films distincts: James Cameron, Peter Jackson, et Christopher Nolan. Il a également marqué la dernière collaboration entre Christopher Nolan et le directeur de la photographie Wally Pfister, qui a récemment lancé sa propre carrière de réalisateur.</p>
+				<p>L&apos;an dernier, Nolan conclut sa trilogie des films sur Batman avec <em>The Dark Knight Rises</em>. Comme son pr&eacute;d&eacute;cesseur, il s&apos;est tr&egrave;s bien vendu au box-office, gagnant plus d&apos;un milliard de dollars dans le monde entier. Seuls trois r&eacute;alisateurs ont atteint cette &eacute;tape avec deux films distincts: James Cameron, Peter Jackson, et Christopher Nolan. Il a &eacute;galement marqu&eacute; la derni&egrave;re collaboration entre Christopher Nolan et le directeur de la photographie Wally Pfister, qui a r&eacute;cemment lanc&eacute; sa propre carri&egrave;re de r&eacute;alisateur.</p>
 				
-				<p>En 2013, Christopher Nolan a produit Man of Steel, réalisé par Zack Snyder. Ce fut la première fois que Nolan produit un film sans le réaliser.</p>
+				<p>En 2013, Christopher Nolan a produit Man of Steel, r&eacute;alis&eacute; par Zack Snyder. Ce fut la premi&egrave;re fois que Nolan produit un film sans le r&eacute;aliser.</p>
 				
-				<p>L'année dernière, Christopher Nolan a co-écrit, réalisé et produit son 9ème long métrage, <em>Interstellar</em>. Il a mis en vedette Matthew McConaughey, Anne Hathaway, Jessica Chastain, et Michael Caine.</p>
+				<p>L&apos;ann&eacute;e derni&egrave;re, Christopher Nolan a co-&eacute;crit, r&eacute;alis&eacute; et produit son 9&egrave;me long m&eacute;trage, <em>Interstellar</em>. Il a mis en vedette Matthew McConaughey, Anne Hathaway, Jessica Chastain, et Michael Caine.</p>
 			
-				<p>Nolan réside à Los Angeles avec sa femme, la productrice Emma Thomas, et leurs enfants. Nolan et Thomas dirigent aussi leur propre société de production, Syncopy.</p>
+				<p>Nolan r&eacute;side &agrave; Los Angeles avec sa femme, la productrice Emma Thomas, et leurs enfants. Nolan et Thomas dirigent aussi leur propre soci&eacute;t&eacute; de production, Syncopy.</p>
 			</article>
 			<div class="comments">
 				<section class="comment_header">
@@ -58,15 +57,15 @@
 				</section>
 				<div class="comment_content">
 					<p>Armays</p> <p>22 mars 2015 10h21</p>
-					<p>J'espère que ce site vous plaira, merci pour votre attetntion. :)</p>
+					<p>J&apos;esp&egrave;re que ce site vous plaira, merci pour votre attetntion. :)</p>
 				</div>
 				<div class="comment_content">
 					<p>Ephe</p> <p>22 mars 2015 11h53</p>
-					<p>Salut Armays c'est un bon début continue comme ça.</p>
+					<p>Salut Armays c&apos;est un bon d&eacute;but continue comme &ccedil;a.</p>
 				</div>
 				<div class="comment_content">
 					<p>Nolan-Addict</p> <p>22 mars 2015 15h23</p>
-					<p>J'adore ce réalisateur, je le suis depuis ses débuts, merci pour ce blog !</p>
+					<p>J&apos;adore ce r&eacute;alisateur, je le suis depuis ses d&eacute;buts, merci pour ce blog !</p>
 				</div>
 				<div class="comment_add">
 					<p>LAISSER UN COMMENTAIRE</p>
