--- a/propos.html
+++ b/propos.html
@@ -30,11 +30,11 @@
 		<div class="left_side">
 			<article>
 				<h1>Un blog de geekettes !</h1>
-				<img width="256" alt="Dessin d'une fille à lunettes" src="assets/geekette.png"/>
-				<p>Nous sommes deux étudiantes de l'IUT d'informatique Année Spéciale de Lyon 1, c'est notre premier site web alors soyez indulgent !</p>
-				<p>Nous sommes fans du réalisateur Christopher Nolan car il est atypique, il aime beaucoup les détails, utilise la narration non linéaire dans ses premiers films, il fait des films très immersifs
-				Nous le suivons depuis son premier film "The Following" et nous sommes particulièrement fans de l'univers de Batman !</p>
-				<p>Si vous avez des questions ou des remarques pour améliorer notre blog, vous pouvez nous contacter à armays.world@gmail.com</p>
+				<img width="256" alt="Dessin d&apos;une fille &agrave; lunettes" src="assets/geekette.png"/>
+				<p>Nous sommes deux &eacute;tudiantes de l&apos;IUT d&apos;informatique Ann&eacute;e Sp&eacute;ciale de Lyon 1, c&apos;est notre premier site web alors soyez indulgent !</p>
+				<p>Nous sommes fans du r&eacute;alisateur Christopher Nolan car il est atypique, il aime beaucoup les d&eacute;tails, utilise la narration non lin&eacute;aire dans ses premiers films, il fait des films tr&egrave;s immersifs
+				Nous le suivons depuis son premier film "The Following" et nous sommes particuli&egrave;rement fans de l&apos;univers de Batman !</p>
+				<p>Si vous avez des questions ou des remarques pour am&eacute;liorer notre blog, vous pouvez nous contacter &agrave; armays.world@gmail.com</p>
 				<p>Merci pour votre attention ! </p>
 			</article>
 		</div>
