--- a/recherche.html
+++ b/recherche.html
@@ -43,7 +43,7 @@
 					<td>23 Mars 2015</td>
 				</tr>
 				<tr>
-					<td><a href="interstellar.html">Critique d'Interstellar</a></td>
+					<td><a href="interstellar.html">Critique d&apos;Interstellar</a></td>
 					<td>24 Mars 2015</td>
 				</tr>
 			</table>
