--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 	<div class="content">
 		<div class="left_side">
 			<article>
-				<h1>Un réalisateur complexe</h1>
+				<h1>Un r&eacute;alisateur complexe</h1>
 				<figure>
-					<img alt="Christopher Nolan à Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
+					<img alt="Christopher Nolan a Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
 					<figcaption>La photo est de sbclick <a href="http://creativecommons.org/licenses/by/2.0">[CC by 2.0]</a><a href="http://commons.wikimedia.org/wiki/File%3AChristopher_nolan.jpg"> via Wikimedia Commons.</a></figcaption>
 				</figure>
-				<p>Christopher Nolan, né le 30 juillet 1970 à Londres, est un réalisateur, producteur et scénariste britanno-américain.
+				<p>Christopher Nolan, n&eacute; le 30 juillet 1970 &agrave; Londres, est un r&eacute;alisateur, producteur et sc&eacute;nariste britanno-am&eacute;ricain.
 
-				Il s'est fait connaître à la fin des années 1990 grâce à son premier long métrage <em>Following</em>, tourné en noir et blanc. Par la suite, il a connu le succès avec les films <em>Memento</em>, <em>Le Prestige</em>, <em>Inception</em>, <em>Interstellar</em> et la plus récente série de films Batman : <em>Batman Begins</em>, <em>The Dark Knight</em> et <em>The Dark Knight Rises</em>. Il est principalement connu pour ses scénarios complexes, et il a traité de nombreux sujets à travers ces films comme la mémoire pour </em>Memento</em>, la magie pour <em>Le Prestige</em>, les rêves pour <em>Inception</em> et l'espace et le temps dans <em>Interstellar</em>.
+				Il s&apos;est fait conna&icirc;tre &agrave; la fin des ann&eacute;es 1990 gr&acirc;ce &agrave; son premier long m&eacute;trage <em>Following</em>, tourn&eacute; en noir et blanc. Par la suite, il a connu le succ&egrave;s avec les films <em>Memento</em>, <em>Le Prestige</em>, <em>Inception</em>, <em>Interstellar</em> et la plus r&eacute;cente s&eacute;rie de films Batman : <em>Batman Begins</em>, <em>The Dark Knight</em> et <em>The Dark Knight Rises</em>. Il est principalement connu pour ses sc&eacute;narios complexes, et il a trait&eacute; de nombreux sujets &agrave; travers ces films comme la m&eacute;moire pour <em>Memento</em>, la magie pour <em>Le Prestige</em>, les r&ecirc;ves pour <em>Inception</em> et l&apos;espace et le temps dans <em>Interstellar</em>.
 
-				Il est le PDG et créateur de la société de production Syncopy Films.</p>
+				Il est le PDG et cr&eacute;ateur de la soci&eacute;t&eacute; de production Syncopy Films.</p>
 				<a href="biographie.html">Lire la suite</a>
 			</article>
 			<div class="comments">
@@ -46,7 +46,7 @@
 				</section>
 				<div class="comment_content">
 					<p>Nolan-Addict</p> <p>22 mars 2015 15h23</p>
-					<p>J'adore ce réalisateur, je le suis depuis ses débuts, merci pour ce blog !</p>
+					<p>J&apos;adore ce r&eacute;alisateur, je le suis depuis ses d&eacute;buts, merci pour ce blog !</p>
 				</div>
 			</div>
 		</div>
