dernières modifs sur les html

--- a/interstellar.html
+++ b/interstellar.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="assets/style.css">
 	<link rel="stylesheet" type="text/css" href="assets/biography_style.css">
     <title>Blog sur Christopher Nolan</title>
@@ -52,11 +53,11 @@
 				
 				<p>Quant &agrave; la science abord&eacute;e, je trouve qu&apos;il est inutile de la d&eacute;cortiquer &eacute;tant donn&eacute; que l&apos;humanit&eacute; ne s&apos;est jamais aventur&eacute;e plus loin que la face illumin&eacute;e de la lune. Et le fait que Degrasse Tyson, entre autres, s&apos;est d&eacute;clar&eacute; grand d&eacute;fenseur des th&eacute;ories utilis&eacute;es par le film enl&egrave;ve toute cr&eacute;dibilit&eacute; aux dires de tout autre personne qu&apos;un Bac + 1000. </p>
 				
-				<p>En tout et pour tout, <em>Interstellar</em> aurait &eacute;t&eacute; mieux accept&eacute; s&apos;il fut r&eacute;alis&eacute; par un autre que Christopher Nolan, mais il l&apos;aurait &eacute;t&eacute; beaucoup moins s&apos;il &eacute;tait sorti avant <em>Gravity</em>. La rudesse du visuel enrob&eacute; de la complexit&eacute; des &eacute;v&egrave;nements place le film d&apos;Alfonso Cuar&oacute;n au rang d&apos;Elysium et autres &quot;lolleries&quot; sci-fi. Le jeu des acteurs, qui n&apos;ont plus rien &agrave; prouver &agrave; qui que ce soit (notamment un certain que je ne mentionnerais pas) contribuent grandement &agrave; la beaut&eacute; du g&eacute;nie des effets sp&eacute;ciaux propre au r&eacute;alisateur. </p>
+				<p>En tout et pour tout, <em>Interstellar</em> aurait &eacute;t&eacute; mieux accept&eacute; s&apos;il avait &eacute;t&eacute; r&eacute;alis&eacute; par un autre que Christopher Nolan, mais il l&apos;aurait &eacute;t&eacute; beaucoup moins s&apos;il &eacute;tait sorti avant <em>Gravity</em>. La rudesse du visuel enrob&eacute; de la complexit&eacute; des &eacute;v&egrave;nements place le film d&apos;Alfonso Cuar&oacute;n au rang d&apos;Elysium et autres &quot;lolleries&quot; sci-fi. Le jeu des acteurs, qui n&apos;ont plus rien &agrave; prouver &agrave; qui que ce soit (notamment un certain que je ne mentionnerais pas) contribuent grandement &agrave; la beaut&eacute; du g&eacute;nie des effets sp&eacute;ciaux propre au r&eacute;alisateur. </p>
 			</article>
 			<div class="comments">
 				<section class="comment_header">
-					<h2>1 commentaire sur "Critique d&apos;Interstellar"</h2>
+					<h2>1 commentaire sur "Critique d&apos;Interstellar" :</h2>
 				</section>
 				<div class="comment_content">
 					<p>Armays</p> <p>25 mars 2015 22h54</p>
