--- a/index.html
+++ b/index.html
@@ -30,12 +30,15 @@
 			<article>
 				<h1>Un r&eacute;alisateur complexe</h1>
 				<figure>
-					<img alt="Christopher Nolan a Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
+					<img alt="Christopher Nolan au Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
+					<p>Christopher Nolan au Santa Barbara International Film Festival</p>
 					<figcaption>La photo est de sbclick <a href="http://creativecommons.org/licenses/by/2.0">[CC by 2.0]</a><a href="http://commons.wikimedia.org/wiki/File%3AChristopher_nolan.jpg"> via Wikimedia Commons.</a></figcaption>
 				</figure>
 				<p>Christopher Nolan, n&eacute; le 30 juillet 1970 &agrave; Londres, est un r&eacute;alisateur, producteur et sc&eacute;nariste britanno-am&eacute;ricain.
 
-				Il s&apos;est fait conna&icirc;tre &agrave; la fin des ann&eacute;es 1990 gr&acirc;ce &agrave; son premier long m&eacute;trage <em>Following</em>, tourn&eacute; en noir et blanc. Par la suite, il a connu le succ&egrave;s avec les films <em>Memento</em>, <em>Le Prestige</em>, <em>Inception</em>, <em>Interstellar</em> et la plus r&eacute;cente s&eacute;rie de films Batman : <em>Batman Begins</em>, <em>The Dark Knight</em> et <em>The Dark Knight Rises</em>. Il est principalement connu pour ses sc&eacute;narios complexes, et il a trait&eacute; de nombreux sujets &agrave; travers ces films comme la m&eacute;moire pour <em>Memento</em>, la magie pour <em>Le Prestige</em>, les r&ecirc;ves pour <em>Inception</em> et l&apos;espace et le temps dans <em>Interstellar</em>.
+				Il s&apos;est fait conna&icirc;tre &agrave; la fin des ann&eacute;es 1990 gr&acirc;ce &agrave; son premier long m&eacute;trage <em>Following</em>, tourn&eacute; en noir et blanc. Par la suite, il a connu le succ&egrave;s avec les films <em>Memento</em>, <em>Le Prestige</em>, <em>Inception</em>, <em>Interstellar</em> et la plus r&eacute;cente s&eacute;rie de films Batman : <em>Batman Begins</em>, <em>The Dark Knight</em> et <em>The Dark Knight Rises</em>.</p>
+				
+				<p>Il est principalement connu pour ses sc&eacute;narios complexes, et il a trait&eacute; de nombreux sujets &agrave; travers ces films comme la m&eacute;moire pour <em>Memento</em>, la magie pour <em>Le Prestige</em>, les r&ecirc;ves pour <em>Inception</em> et l&apos;espace et le temps dans <em>Interstellar</em>.
 
 				Il est le PDG et cr&eacute;ateur de la soci&eacute;t&eacute; de production Syncopy Films.</p>
 				<a href="biographie.html">Lire la suite</a>
